fix issue with crown not showing

--- a/app/static/scss/modules/_govuk-logo.scss
+++ b/app/static/scss/modules/_govuk-logo.scss
@@ -22,17 +22,17 @@
   display: inline-block;
 
   @include screen {
-    background-image: image-url('govuk_template/source/assets/stylesheets/images/gov.uk_logotype_crown-1x.png');
+    background-image: url('/static/govuk_template/assets/stylesheets/images/gov.uk_logotype_crown-1x.png');
     background-repeat: no-repeat;
 
     @include device-pixel-ratio {
-      background-image: image-url('govuk_template/source/assets/stylesheets/images/gov.uk_logotype_crown.png');
+      background-image: url('/static/govuk_template/assets/stylesheets/images/gov.uk_logotype_crown.png');
       background-size: 36px 32px;
     }
 
     @include media(tablet) {
       margin-right: 8px;
-      background-position: 0 1px;
+      background-position: 0 3px;
     }
   }
 }
